--- a/index.html
+++ b/index.html
@@ -24,19 +24,20 @@
     />
 
     <!-- ....script... -->
-    <script src="index.js" async></script>
   </head>
 
   <body class="vh-100 d-flex align-items-center">
     <div class="container-fluid">
       <div class="row justify-content-center">
         <div class="col-8 col-md-5 col-lg-4 bg-light pt-5 rounded shadow-sm">
+          <h2 class="text-center">Palindroma</h2>
           <div class="container">
-            <form action="" id="formPalindromo">
+            <form action="#" id="formPalindromo">
               <div class="container d-flex justify-content-between">
                 <label for="palindromo" class="my-2"> Parola Here </label>
               </div>
               <input type="text" class="form-control" id="inputPalindromo" />
+              <p class="text-center" id="result"></p>
               <div class="container d-flex flex-column">
                 <button class="btn btn-dark my-3 rounded-pill" id="btnSubmit">
                   Controlla
@@ -47,5 +48,6 @@
         </div>
       </div>
     </div>
+    <script src="index.js"></script>
   </body>
 </html>
